--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,12 +19,12 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode */
 [data-theme='dark'] {
-  --ifm-color-primary: #1a1a1a;
-  --ifm-color-primary-dark: #0d0d0d;
-  --ifm-color-primary-darker: #000000; 
-  --ifm-color-primary-darkest: #000000;
-  --ifm-color-primary-light: #333333;
-  --ifm-color-primary-lighter: #4d4d4d;
-  --ifm-color-primary-lightest: #666666;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #dbdbdb;
+  --ifm-color-primary-dark: #c5c5c5;
+  --ifm-color-primary-darker: #bababa;
+  --ifm-color-primary-darkest: #999999;
+  --ifm-color-primary-light: #f1f1f1;
+  --ifm-color-primary-lighter: #fcfcfc;
+  --ifm-color-primary-lightest: #ffffff;
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1); 
 }
