--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,7 +14,9 @@
   --ifm-color-primary-lighter: #4d4d4d;
   --ifm-color-primary-lightest: #666666;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(255, 1, 1, 0.1);
+
+  --ifm-link-color: #1a8cff;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode */
@@ -27,4 +29,6 @@
   --ifm-color-primary-lighter: #fcfcfc;
   --ifm-color-primary-lightest: #ffffff;
   --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1); 
+
+  --ifm-link-color: #1a8cff;
 }
