--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,7 +21,16 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  font-weight: 300; /* Regular weight */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
 
 √ß .footer__link-separator {
