--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,3 +40,8 @@ h6 {
 .footer__link-item a:hover {
   text-decoration: none;
 }
+
+article a {
+  text-decoration: underline;
+  color: #0066ff;
+}
