--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -46,8 +46,27 @@ article a {
   color: #0066ff;
 }
 
-#waiting-list-announcement {
-  padding: 0;
-  margin: 0;
-  font-size: 1.5em;
+.waiting-list-announcement {
+  width: 100%;
+  background: linear-gradient(
+    to right,
+    #ec4899,
+    #ef4444,
+    #f59e0b
+  ); /* Pink to red to yellow gradient */
+  color: white;
+  text-align: center;
+  padding: 1rem 0; /* Padding for top and bottom */
+  font-size: 1.3em;
+  font-weight: bold !important;
+  text-decoration: none;
+  color: white;
+}
+
+.cta-link {
+  text-decoration: none !important;
+}
+
+.cta-link:hover {
+  text-decoration: underline !important;
 }
