updating announcement bar to rsvp call to action

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -48,17 +48,10 @@ article a {
 
 .waiting-list-announcement {
   width: 100%;
-  background: linear-gradient(
-    to right,
-    #ec4899,
-    #ef4444,
-    #f59e0b
-  ); /* Pink to red to yellow gradient */
   color: white;
   text-align: center;
-  padding: 1rem 0; /* Padding for top and bottom */
   font-size: 1.3em;
-  font-weight: bold !important;
+  font-weight: light !important;
   text-decoration: none;
   color: white;
 }
